src/test/deca/syntax/valid/cast_class_2.deca
class A { }
class B extends A { }
class C extends B { }
{
A a;
B b;
C c;
c = new C();
b = (B)(c);
b = (B)(a);
}
