src/test/deca/syntax/invalid/extensionTwoClasses.deca
//Test syntaxiquement incorrecte avec extension two classes
class A { }
class B { }
class C extends B extends C { }
